# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2016-11-28 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Avoid deprecated std::auto_ptr

2016-11-23 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix to avoid triggering SYN flooding protection in
      newer Linux kernel versions
      (e.g., 4.4.0-47 used with Ubuntu 16.04.1)
    * Improve error log output

2016-11-22 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Improve external service startup time
    * Minor integration test fix

2016-11-21 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Update cpg
    * Update trie

2016-11-16 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Make OS time more efficient in cloudi_timestamp

2016-11-11 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Update cpg

2016-11-10 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Update cpg

2016-11-06 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add missing syntax_tools dependency due to merl usage

2016-11-04 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Improve external service port deserialize

2016-10-29 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Improve max_heap_size type specification

2016-10-28 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Update locally modified m4 macros after submitting the changes to
      the GNU Autoconf Archive

2016-10-08 Michael Truog   <mjtruog [at] gmail (dot) com>

    * m4/ax_check_class.m4 and m4/ax_prog_java_works.m4
      had uuencoded java class files which were removed
      (the uuencoded java class files were decompiled to confirm
       they match the commented code, but the reliance on
       binary data isn't necessary or helpful for future use)

2016-10-07 Michael Truog   <mjtruog [at] gmail (dot) com>

    * CloudI version 1.5.4 released
    * Revert ax_boost_thread.m4 update due to it requiring local changes